# babble

./: .gitignore  Makefile  README.md  default.yml  docker-compose.yml  pyproject.toml
.github/: README.md
.github/workflows/: 001-workflow.yml  encoded-dump.yml
babble/: README.md  __init__.py  config.yaml  datasets.py  ephemeral.py  model.py  pyproject.toml  server.py
babble/babble/: ephemeral.py  model.py  server.py
babble/babble/config/: __init__.py
babble/babble/pipelines/: prompt.py
babble/babble/www/: index.html  results.json
babble/babble/www/assets/css/: style.css
babble/babble/www/assets/js/: main.js
babble/config/: __init__.py
babble/data/: security_onion_prompt.md
babble/data/www/assets/js/: main.js
babble/pipelines/: prompt.py
babble/www/: index.html
code/: pyproject.toml
code/code/server/: ephemeral.py
data/: streamfwd.conf
data/ingest/: .gitignore
data/ingest/pcap/finished_pcaps/: wmi_commands_calc.pcap
data/splunk/: .gitignore  splunk-launch.conf.bak
data/splunk/etc/apps/Splunk_TA_stream/local/: streamfwd.conf
data/splunk/etc/apps/Splunk_TA_zeek/local/: inputs.conf  props.conf
data/splunk/etc/apps/splunk_app_stream/local/: streamfwd.conf
data/splunk/etc/system/local/: inputs.conf
docker/: Dockerfile  docker-compose.yml
model_server/: README.md  config.yaml  pyproject.toml
model_server/model_server/: ephemeral.py  server.py
model_server/model_server/server/: ephemeral.py
tools/dev/: default.yml  scratch.sh
