[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"


[project]
requires-python = ">=3.8"
version = "0.0.1"

name        = "babble"
description = ""
readme      = "README.md"
license     = "MIT"

dependencies = [
    "flask",
    "torch",
    "tensorflow",
    "tensorflow-datasets",
    "tensorflow-io",
    "tensorflow-text",
    "transformers",
]

[project.optional-dependencies]
gpu = [ "tensorflow-gpu", ]


[project.scripts]
babble = "babble.ephemeral:main"
