[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"


[project]
requires-python = ">=3.8"
version = "0.0.1"

name        = "code"
description = ""
readme      = "README.md"
license     = "MIT"

dependencies = [
    "torch",
    "transformers",
    "flask",
]

# [project.optional-dependencies]
# javascript = [ "js", "jsmin" ]


[project.scripts]
start-server = "model_server.ephemeral:main"
